--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.38.0
+
 anthropic>=0.30
 python-docx
 requests
@@ -7,3 +7,11 @@ lxml
 pandas
 pytz
 python-dotenv
+streamlit
+playwright
+python-docx
+python-dateutil
+python-dotenv
+anthropic
+pandas
+
