--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-playwright==1.45.0
+playwright==1.55.0
 python-docx
 python-dotenv
-anthropic
 pandas
-python-dateutil
+streamlit
+anthropic
+lxml
