--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# App + runtime
+# --- Core app ---
 streamlit>=1.36,<1.41
 playwright==1.48.0
 pandas>=2.2
@@ -8,16 +8,16 @@ python-dotenv>=1.0
 tenacity>=8.4
 anthropic>=0.36
 
-# Web + parsing (comuni per scraping/API)
+# --- Web & parsing ---
 requests>=2.32
 beautifulsoup4>=4.12
 lxml>=5.3
 
-# SQL stack (greenlet pin to avoid source build on Streamlit Cloud)
+# --- Database stack ---
 SQLAlchemy==2.0.36
-greenlet==3.1.1
+greenlet==3.1.1   # versione con wheel precompilata (niente build da sorgente)
 
-# Build tooling (avoid source builds sneaking in)
+# --- Build toolchain (evita errori pip su Streamlit Cloud) ---
 pip==25.2
 setuptools>=75
 wheel>=0.44
