--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+--only-binary=:all:
+
+# Toolchain prima, così pip è moderno già all’inizio
+pip==25.2
+setuptools>=75
+wheel>=0.44
+
+# Stack DB (niente build da sorgente)
+greenlet==3.1.1
+SQLAlchemy==2.0.36
+
+# Core app
 streamlit>=1.36,<1.41
 playwright==1.48.0
 pandas>=2.2
@@ -6,11 +18,9 @@ python-dateutil>=2.9
 python-dotenv>=1.0
 tenacity>=8.4
 anthropic>=0.36
+
+# Web & parsing
 requests>=2.32
 beautifulsoup4>=4.12
 lxml>=5.3
-SQLAlchemy==2.0.36
-greenlet==3.1.1
-pip==25.2
-setuptools>=75
-wheel>=0.44
+
