--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
---only-binary=:all:
-
-# Toolchain prima, così pip è moderno già all’inizio
+# --- Toolchain (aggiornata per evitare errori build) ---
 pip==25.2
 setuptools>=75
 wheel>=0.44
 
-# Stack DB (niente build da sorgente)
-greenlet==3.1.1
+# --- Database stack ---
 SQLAlchemy==2.0.36
+greenlet==3.1.1   # wheel manylinux, evita build da sorgente
 
-# Core app
+# --- Core app ---
 streamlit>=1.36,<1.41
 playwright==1.48.0
 pandas>=2.2
@@ -19,7 +17,7 @@ python-dotenv>=1.0
 tenacity>=8.4
 anthropic>=0.36
 
-# Web & parsing
+# --- Web & parsing ---
 requests>=2.32
 beautifulsoup4>=4.12
 lxml>=5.3
