--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-# --- Toolchain (aggiornata per evitare errori build) ---
+# --- Toolchain (per evitare errori di build) ---
 pip==25.2
 setuptools>=75
 wheel>=0.44
 
 # --- Database stack ---
 SQLAlchemy==2.0.36
-greenlet==3.1.1   # wheel manylinux, evita build da sorgente
+greenlet==3.1.1
 
 # --- Core app ---
 streamlit>=1.36,<1.41
