--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
-pip==25.2
-setuptools>=75
-wheel>=0.44
-SQLAlchemy==2.0.36
-greenlet==3.1.1
-streamlit>=1.36,<1.41
+streamlit>=1.36
 playwright==1.48.0
-pandas>=2.2
-python-docx>=1.1
-python-dateutil>=2.9
-python-dotenv>=1.0
-tenacity>=8.4
-anthropic>=0.36
-requests>=2.32
-beautifulsoup4>=4.12
-lxml>=5.3
+python-docx
+python-dotenv
+python-dateutil
+anthropic>=0.31
+tenacity>=8.2
+pandas>=2.0
